deploy/ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: lebleu-system
  labels:
    name: lebleu-system
