deploy/traefik.2.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: lebleu-system
  labels:
    app: traefik
spec:
  type: LoadBalancer
  ports:
    - port: 80
      name: http
    - port: 443
      name: https
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-ui
  namespace: lebleu-system
  labels:
    app: traefik
spec:
  type: ClusterIP
  selector:
    app: traefik
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: traefik
  namespace: lebleu-system
  labels:
    app: traefik
spec:
  template:
    metadata:
      labels:
        app: traefik
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - image: traefik
          name: traefik
          ports:
            - containerPort: 80
            - containerPort: 443
            - containerPort: 8080
          args:
            - --consul
            - --consul.endpoint=traefik-consul:8500
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ui
  namespace: lebleu-system
  annotations:
    app: traefik
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: traefik.gcp.lebleu.co
      http:
        paths:
          - backend:
              serviceName: traefik-ui
              servicePort: 80
